[package]
name = "zmq-sys"
version = "0.13.0"
authors = [
    "a.rottmann@gmx.at",
    "erick.tryzelaar@gmail.com",
]
license = "MIT/Apache-2.0"
description = "Low-level bindings to the zeromq library"
keywords = ["ffi", "bindings"]
categories = ["external-ffi-bindings"]
repository = "https://github.com/erickt/rust-zmq"
build = "build/main.rs"
links = "zmq"

[features]

[dependencies]
libc = "0.2.175"

[build-dependencies]
system-deps = "7.0.5"
zeromq-src = { git = "https://github.com/owens3364/zeromq-src-rs", rev = "d36864d" }

[package.metadata.system-deps]
libzmq = "4.3.5"
